主页调整完成，如之前已经安装过，需自行到根目录清除图片缓存，否则显示有BUG

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="index_price">秒杀价:</string>
     <string name="index_raw_price">原价:</string>
     <string name="index_slogan">疯狂秒杀</string>
-    <string name="index_promotion">促销卖场</string>
+    <string name="index_promotion">商品推荐</string>
     <string name="index_recharge">充值</string>
     <string name="index_group_buy">团购</string>
     <string name="index_lottery">彩票</string>
